--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
-                        <h3 class="mb-0">NTUPDC Annual Show - Addiction</h3>
+                        <h3 class="mb-0">Addiction</h3>
                         <div class="subheading mb-3">Man (Lead)</div>
                     </div>
                     <div class="resume-date text-md-right">
@@ -209,7 +209,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
-                        <h3 class="mb-0">NTUPDC Opening - Most Wanted</h3>
+                        <h3 class="mb-0">Most Wanted</h3>
                         <div class="subheading mb-3">The North Korean (Lead)</div>
                     </div>
                     <div class="resume-date text-md-right">
@@ -220,8 +220,8 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
-                        <h3 class="mb-0">NTUPDC Annual Show - Tale Our Classics</h3>
-                        <div class="subheading mb-3">The Good Student (Lead)</div>
+                        <h3 class="mb-0">Tale Our Classics</h3>
+                        <div class="subheading mb-3">The Good Student</div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">April 2016</span>
@@ -239,7 +239,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">Campus Collection Modeling Competition</h3>
-                        <div class="subheading mb-3">Model / TOP 7 (100 contestants)</div>
+                        <div class="subheading mb-3">Model <span class="text-primary">/ TOP 7 (100 contestants)</span></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">March 2018</span>
@@ -328,6 +328,7 @@
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">June 2019</span>
+                        <p>Directing II Final Project<br>NTUDT Experimental Theatre</p>
                     </div>
                 </div>
 
@@ -338,6 +339,7 @@
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">June 2017</span>
+                        <p>Directing I Final Project<br>NTUDT Experimental Theatre</p>
                     </div>
                 </div>
 
@@ -348,6 +350,7 @@
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">February 2017</span>
+                        <p>Allure<br>Taipei People Cafe</p>
                     </div>
                 </div>
 
@@ -358,6 +361,7 @@
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">January 2017</span>
+                        <p>Directing II Final Project<br>NTUDT Experimental Theatre</p>
                     </div>
                 </div>
 
@@ -368,6 +372,7 @@
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">December 2016</span>
+                        <p>NTUDT Graduation Production<br>Hakka Theatre</p>
                     </div>
                 </div>
 
@@ -378,6 +383,7 @@
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">September 2016</span>
+                        <p>NTUDT Summer Production<br>NTUDT Experimental Theatre</p>
                     </div>
                 </div>
 
@@ -388,6 +394,7 @@
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">August 2016</span>
+                        <p>NTUDT Summer Production<br>NTUDT Experimental Theatre</p>
                     </div>
                 </div>
         </section>
@@ -463,4 +470,4 @@
         <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
         <script src="js/resume.min.js"></script>
 
-</body>ｂｂ
+</body>
