--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h1 class="mb-0">Jacky
                     <span class="text-primary">Hung</span>
                 </h1>
-                <div class="subheading mb-5">Dechang St., Wanhua Dist., Taipei City 108, Taiwan, +886-987-190-590,
+                <div class="subheading mb-5">Wanhua Dist., Taipei City 108, Taiwan, +886-987-190-590,
                     <a href="mailto:jacky5559tw@gmail.com">jacky5559tw@gmail.com</a>
                 </div>
                 <p class="lead mb-5">Freelance Actor / Model / Dancer<br>Struggler in Computer Programming<br><br>Undergraduate at National Taiwan University (NTU),<br>department of Drama and Theater, specialize in Acting & Directing<br><br>Graduated from Taipei Municipal
@@ -94,10 +94,11 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">The Book of Fate Trilogy One:<br>The Forgotten God</h3>
-                        <div class="subheading mb-3">The Elves</div>
+                        <div class="subheading mb-3">The Elves <a href="https://www.youtube.com/watch?v=pc0CQq6wkTQ"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">December 2017<br>Tainaneren Semble<br>National Theatre</span>
+                        <span class="text-primary">December 2017</span>
+                        <p>Tainaneren Semble<br>National Theatre</p>
                     </div>
                 </div>
 
@@ -115,7 +116,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">Aalst</h3>
-                        <div class="subheading mb-3">Man (Lead)</div>
+                        <div class="subheading mb-3">Man (Lead) <a href="https://youtu.be/H5cTY-1qJZY"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a> <a href="https://youtu.be/tg94bUaqBr8"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">June 2018</span>
@@ -137,7 +138,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">Time Stays for No Hero</h3>
-                        <div class="subheading mb-3">Cheng, Ping (Lead)</div>
+                        <div class="subheading mb-3">Cheng, Ping (Lead) <a href="https://www.youtube.com/watch?v=i5eke7TC6OM&feature=youtu.be"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">August 2017</span>
@@ -166,7 +167,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">Country Road</h3>
-                        <div class="subheading mb-3">Agent</div>
+                        <div class="subheading mb-3">Agent <a href="https://www.youtube.com/watch?v=yj_FaROCEGA&feature=youtu.be&fbclid=IwAR3tPFyXFsOvV4B6cOyzmkSeFYSTbX3bdBdG6dIy5TznxNgzX1UIUu1S7Zw"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">October 2018</span>
@@ -177,7 +178,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">MWD Commercial</h3>
-                        <div class="subheading mb-3">A-Yu (Lead)</div>
+                        <div class="subheading mb-3">A-Yu (Lead) <a href="https://www.facebook.com/watch/?v=661262877414953"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">November 2017</span>
@@ -188,7 +189,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">Time Stays for No Hero</h3>
-                        <div class="subheading mb-3">Cheng, Ping (Lead)</div>
+                        <div class="subheading mb-3">Cheng, Ping (Lead) <a href="https://www.youtube.com/watch?v=kHfsL0cLtY4"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">August 2017</span>
@@ -250,7 +251,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">GFU New Force Party</h3>
-                        <div class="subheading mb-3">Freestyle Dancer</div>
+                        <div class="subheading mb-3">Freestyle Dancer <a href="https://www.youtube.com/watch?v=6-Q_YmsIIoI&list=PLKPLXR3WqWGesCvhd7KwIWG0YTDquyMJr&index=2"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">February 2018</span>
@@ -282,8 +283,8 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
-                        <h3 class="mb-0">Dance Soul Annual Dance Show</h3>
-                        <div class="subheading mb-3">Hip Hop Dancer</div>
+                        <h3 class="mb-0">Dance is Good</h3>
+                        <div class="subheading mb-3">Hip Hop Dancer <a href="https://www.youtube.com/watch?v=4TfW03oFZnI&list=PLKPLXR3WqWGesCvhd7KwIWG0YTDquyMJr&index=2&t=0s"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">October 2017</span>
@@ -294,7 +295,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">Noise Taipei OUCH!</h3>
-                        <div class="subheading mb-3">Model / Dancer</div>
+                        <div class="subheading mb-3">Model / Dancer <a href="https://www.facebook.com/watch/?v=451815118508293"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">July 2017</span>
@@ -305,7 +306,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">GFU New Force Party</h3>
-                        <div class="subheading mb-3">Hip Hop Dancer</div>
+                        <div class="subheading mb-3">Hip Hop Dancer <a href="https://www.youtube.com/watch?v=_FwfeME9SYU&list=PLKPLXR3WqWGesCvhd7KwIWG0YTDquyMJr&index=1"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">February 2017</span>
@@ -320,6 +321,17 @@
         <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
             <div class="w-100">
                 <h2 class="mb-5">Theatre Experience</h2>
+
+                <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="resume-content">
+                        <h3 class="mb-0">Non Reading Club</h3>
+                        <div class="subheading mb-3">Choreographer Assistant</div>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">June 2019</span>
+                        <p>Musical II Final Project<br>NTUDT Experimental Theatre</p>
+                    </div>
+                </div>
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
