--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
+                <div class="resume-date text-md-right">
+                    <a href="/resume/演員履歷.pdf" download><button type="button" class="btn btn-outline-success">Chinese Resume</button></a>
+                    <a href="/resume/Actor Resume.pdf" download><button type="button" class="btn btn-outline-success">English Resume</button></a>
+                </div>
             </div>
         </section>
 
