--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
                     Jianguo High School
                 </p>
                 <div class="social-icons">
-                    <a href="#">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
+                    <div class="container">
+                        <a href="#" data-toggle="popover" data-content="link coming soon" data-trigger="hover">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
                     <a href="https://www.facebook.com/jacky.hung.3956">
                         <i class="fab fa-facebook-f"></i>
                     </a>
@@ -101,11 +103,10 @@
                         <div class="subheading mb-3">The Elves <a href="https://www.youtube.com/watch?v=pc0CQq6wkTQ"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">December 2017</span>
-                        <p>Tainaneren Semble<br>National Theatre</p>
+                        <span class="text-primary">December 2017<br>Tainaneren Semble<br>National Theatre</span>
                     </div>
                 </div>
-
+                <hr>
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">Szewcy (The Shoemakers)</h3>
@@ -298,12 +299,12 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
-                        <h3 class="mb-0">Noise Taipei OUCH!</h3>
+                        <h3 class="mb-0">OUCH!</h3>
                         <div class="subheading mb-3">Model / Dancer <a href="https://www.facebook.com/watch/?v=451815118508293"><span class="badge badge-success"><i class="fas fa-file-video"></i></span></a></div>
                     </div>
                     <div class="resume-date text-md-right">
                         <span class="text-primary">July 2017</span>
-                        <p>Noise</p>
+                        <p>Noise Taipei</p>
                     </div>
                 </div>
 
