--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     Jianguo High School
                 </p>
                 <div class="social-icons">
-                    <a href="#" data-toggle="popover" data-content="link coming soon" data-trigger="hover">
+                    <a href="#">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="https://www.facebook.com/jacky.hung.3956">
