--- a/index.html
+++ b/index.html
@@ -485,4 +485,4 @@
         <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
         <script src="js/resume.min.js"></script>
 
-</body>
+</body>b
