--- a/index.html
+++ b/index.html
@@ -69,22 +69,18 @@
                     Jianguo High School
                 </p>
                 <div class="social-icons">
-                    <a href="#">
+                    <a href="#" id="pop" data-trigger="hover" data-toggle="tooltip" data-content="link coming soon" data-placement="top">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="https://www.facebook.com/jacky.hung.3956">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="#">
+                    <a href="#" id="pop" data-trigger="hover" data-toggle="tooltip" data-content="link coming soon" data-placement="top">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="#">
+                    <a href="#" id="pop" data-trigger="hover" data-toggle="tooltip" data-content="link coming soon" data-placement="top">
                         <i class="fab fa-twitter"></i>
                     </a>
-                </div>
-                <div class="resume-date text-md-right">
-                    <a href="/resume/演員履歷.pdf" download><button type="button" class="btn btn-outline-success">Chinese Resume</button></a>
-                    <a href="/resume/Actor Resume.pdf" download><button type="button" class="btn btn-outline-success">English Resume</button></a>
                 </div>
             </div>
         </section>
